# output/php/SwaggerClient-php/lib/Api/CustomerInfoApi.php
@@ -378,306 +378,6 @@ class CustomerInfoApi
     }
 
     /**
-     * Operation getRoles
-     *
-     * List Roles for Customer
-     *
-     * @param  string $customer_id Customer ID (required)
-     * @param  string $page_cursor Cursor to fetch next paginated items (optional)
-     * @param  int $page_size Max number of items to return in a page (optional, default to 20)
-     *
-     * @throws \Swagger\Client\ApiException on non-2xx response
-     * @throws \InvalidArgumentException
-     * @return \Swagger\Client\Model\RoleList
-     */
-    public function getRoles($customer_id, $page_cursor = null, $page_size = '20')
-    {
-        list($response) = $this->getRolesWithHttpInfo($customer_id, $page_cursor, $page_size);
-        return $response;
-    }
-
-    /**
-     * Operation getRolesWithHttpInfo
-     *
-     * List Roles for Customer
-     *
-     * @param  string $customer_id Customer ID (required)
-     * @param  string $page_cursor Cursor to fetch next paginated items (optional)
-     * @param  int $page_size Max number of items to return in a page (optional, default to 20)
-     *
-     * @throws \Swagger\Client\ApiException on non-2xx response
-     * @throws \InvalidArgumentException
-     * @return array of \Swagger\Client\Model\RoleList, HTTP status code, HTTP response headers (array of strings)
-     */
-    public function getRolesWithHttpInfo($customer_id, $page_cursor = null, $page_size = '20')
-    {
-        $returnType = '\Swagger\Client\Model\RoleList';
-        $request = $this->getRolesRequest($customer_id, $page_cursor, $page_size);
-
-        try {
-            $options = $this->createHttpClientOption();
-            try {
-                $response = $this->client->send($request, $options);
-            } catch (RequestException $e) {
-                throw new ApiException(
-                    "[{$e->getCode()}] {$e->getMessage()}",
-                    $e->getCode(),
-                    $e->getResponse() ? $e->getResponse()->getHeaders() : null,
-                    $e->getResponse() ? $e->getResponse()->getBody()->getContents() : null
-                );
-            }
-
-            $statusCode = $response->getStatusCode();
-
-            if ($statusCode < 200 || $statusCode > 299) {
-                throw new ApiException(
-                    sprintf(
-                        '[%d] Error connecting to the API (%s)',
-                        $statusCode,
-                        $request->getUri()
-                    ),
-                    $statusCode,
-                    $response->getHeaders(),
-                    $response->getBody()
-                );
-            }
-
-            $responseBody = $response->getBody();
-            if ($returnType === '\SplFileObject') {
-                $content = $responseBody; //stream goes to serializer
-            } else {
-                $content = $responseBody->getContents();
-                if (!in_array($returnType, ['string','integer','bool'])) {
-                    $content = json_decode($content);
-                }
-            }
-
-            return [
-                ObjectSerializer::deserialize($content, $returnType, []),
-                $response->getStatusCode(),
-                $response->getHeaders()
-            ];
-
-        } catch (ApiException $e) {
-            switch ($e->getCode()) {
-                case 200:
-                    $data = ObjectSerializer::deserialize(
-                        $e->getResponseBody(),
-                        '\Swagger\Client\Model\RoleList',
-                        $e->getResponseHeaders()
-                    );
-                    $e->setResponseObject($data);
-                    break;
-                case 4XX:
-                    $data = ObjectSerializer::deserialize(
-                        $e->getResponseBody(),
-                        '\Swagger\Client\Model\Error',
-                        $e->getResponseHeaders()
-                    );
-                    $e->setResponseObject($data);
-                    break;
-                case 5XX:
-                    $data = ObjectSerializer::deserialize(
-                        $e->getResponseBody(),
-                        '\Swagger\Client\Model\Error',
-                        $e->getResponseHeaders()
-                    );
-                    $e->setResponseObject($data);
-                    break;
-            }
-            throw $e;
-        }
-    }
-
-    /**
-     * Operation getRolesAsync
-     *
-     * List Roles for Customer
-     *
-     * @param  string $customer_id Customer ID (required)
-     * @param  string $page_cursor Cursor to fetch next paginated items (optional)
-     * @param  int $page_size Max number of items to return in a page (optional, default to 20)
-     *
-     * @throws \InvalidArgumentException
-     * @return \GuzzleHttp\Promise\PromiseInterface
-     */
-    public function getRolesAsync($customer_id, $page_cursor = null, $page_size = '20')
-    {
-        return $this->getRolesAsyncWithHttpInfo($customer_id, $page_cursor, $page_size)
-            ->then(
-                function ($response) {
-                    return $response[0];
-                }
-            );
-    }
-
-    /**
-     * Operation getRolesAsyncWithHttpInfo
-     *
-     * List Roles for Customer
-     *
-     * @param  string $customer_id Customer ID (required)
-     * @param  string $page_cursor Cursor to fetch next paginated items (optional)
-     * @param  int $page_size Max number of items to return in a page (optional, default to 20)
-     *
-     * @throws \InvalidArgumentException
-     * @return \GuzzleHttp\Promise\PromiseInterface
-     */
-    public function getRolesAsyncWithHttpInfo($customer_id, $page_cursor = null, $page_size = '20')
-    {
-        $returnType = '\Swagger\Client\Model\RoleList';
-        $request = $this->getRolesRequest($customer_id, $page_cursor, $page_size);
-
-        return $this->client
-            ->sendAsync($request, $this->createHttpClientOption())
-            ->then(
-                function ($response) use ($returnType) {
-                    $responseBody = $response->getBody();
-                    if ($returnType === '\SplFileObject') {
-                        $content = $responseBody; //stream goes to serializer
-                    } else {
-                        $content = $responseBody->getContents();
-                        if ($returnType !== 'string') {
-                            $content = json_decode($content);
-                        }
-                    }
-
-                    return [
-                        ObjectSerializer::deserialize($content, $returnType, []),
-                        $response->getStatusCode(),
-                        $response->getHeaders()
-                    ];
-                },
-                function ($exception) {
-                    $response = $exception->getResponse();
-                    $statusCode = $response->getStatusCode();
-                    throw new ApiException(
-                        sprintf(
-                            '[%d] Error connecting to the API (%s)',
-                            $statusCode,
-                            $exception->getRequest()->getUri()
-                        ),
-                        $statusCode,
-                        $response->getHeaders(),
-                        $response->getBody()
-                    );
-                }
-            );
-    }
-
-    /**
-     * Create request for operation 'getRoles'
-     *
-     * @param  string $customer_id Customer ID (required)
-     * @param  string $page_cursor Cursor to fetch next paginated items (optional)
-     * @param  int $page_size Max number of items to return in a page (optional, default to 20)
-     *
-     * @throws \InvalidArgumentException
-     * @return \GuzzleHttp\Psr7\Request
-     */
-    protected function getRolesRequest($customer_id, $page_cursor = null, $page_size = '20')
-    {
-        // verify the required parameter 'customer_id' is set
-        if ($customer_id === null || (is_array($customer_id) && count($customer_id) === 0)) {
-            throw new \InvalidArgumentException(
-                'Missing the required parameter $customer_id when calling getRoles'
-            );
-        }
-
-        $resourcePath = '/customers/{customerId}/roles';
-        $formParams = [];
-        $queryParams = [];
-        $headerParams = [];
-        $httpBody = '';
-        $multipart = false;
-
-        // query params
-        if ($page_cursor !== null) {
-            $queryParams['page[cursor]'] = ObjectSerializer::toQueryValue($page_cursor, null);
-        }
-        // query params
-        if ($page_size !== null) {
-            $queryParams['page[size]'] = ObjectSerializer::toQueryValue($page_size, null);
-        }
-
-        // path params
-        if ($customer_id !== null) {
-            $resourcePath = str_replace(
-                '{' . 'customerId' . '}',
-                ObjectSerializer::toPathValue($customer_id),
-                $resourcePath
-            );
-        }
-
-        // body params
-        $_tempBody = null;
-
-        if ($multipart) {
-            $headers = $this->headerSelector->selectHeadersForMultipart(
-                ['application/vnd.api+json']
-            );
-        } else {
-            $headers = $this->headerSelector->selectHeaders(
-                ['application/vnd.api+json'],
-                []
-            );
-        }
-
-        // for model (json/xml)
-        if (isset($_tempBody)) {
-            // $_tempBody is the method argument, if present
-            $httpBody = $_tempBody;
-            // \stdClass has no __toString(), so we should encode it manually
-            if ($httpBody instanceof \stdClass && $headers['Content-Type'] === 'application/json') {
-                $httpBody = \GuzzleHttp\json_encode($httpBody);
-            }
-        } elseif (count($formParams) > 0) {
-            if ($multipart) {
-                $multipartContents = [];
-                foreach ($formParams as $formParamName => $formParamValue) {
-                    $multipartContents[] = [
-                        'name' => $formParamName,
-                        'contents' => $formParamValue
-                    ];
-                }
-                // for HTTP post (form)
-                $httpBody = new MultipartStream($multipartContents);
-
-            } elseif ($headers['Content-Type'] === 'application/json') {
-                $httpBody = \GuzzleHttp\json_encode($formParams);
-
-            } else {
-                // for HTTP post (form)
-                $httpBody = \GuzzleHttp\Psr7\build_query($formParams);
-            }
-        }
-
-            // // this endpoint requires Bearer token
-            if ($this->config->getAccessToken() !== null) {
-            $headers['Authorization'] = 'Bearer ' . $this->config->getAccessToken();
-            }
-
-        $defaultHeaders = [];
-        if ($this->config->getUserAgent()) {
-            $defaultHeaders['User-Agent'] = $this->config->getUserAgent();
-        }
-
-        $headers = array_merge(
-            $defaultHeaders,
-            $headerParams,
-            $headers
-        );
-
-        $query = \GuzzleHttp\Psr7\build_query($queryParams);
-        return new Request(
-            'GET',
-            $this->config->getHost() . $resourcePath . ($query ? "?{$query}" : ''),
-            $headers,
-            $httpBody
-        );
-    }
-
-    /**
      * Create http client option
      *
      * @throws \RuntimeException on file opening failure
