# output/swift5/SwaggerClient/Classes/Swaggers/APIs/CustomerInfoAPI.swift
@@ -105,73 +105,4 @@ open class CustomerInfoAPI {
 
         return requestBuilder.init(method: "GET", URLString: (url?.string ?? URLString), parameters: parameters, isBody: false)
     }
-    /**
-     List Roles for Customer
-
-     - parameter customerId: (path) Customer ID 
-     - parameter pageCursor: (query) Cursor to fetch next paginated items (optional)
-     - parameter pageSize: (query) Max number of items to return in a page (optional, default to 20)
-     - parameter completion: completion handler to receive the data and the error objects
-     */
-    open class func getRoles(customerId: String, pageCursor: String? = nil, pageSize: Int? = nil, completion: @escaping ((_ data: RoleList?,_ error: Error?) -> Void)) {
-        getRolesWithRequestBuilder(customerId: customerId, pageCursor: pageCursor, pageSize: pageSize).execute { (response, error) -> Void in
-            completion(response?.body, error)
-        }
-    }
-
-
-    /**
-     List Roles for Customer
-     - GET /customers/{customerId}/roles
-
-     - :
-       - type: http
-       - name: service_auth
-     - examples: [{contentType=application/json, example={
-  "data" : [ {
-    "attributes" : {
-      "displayName" : "User",
-      "permissions" : [ "app.accountMgr", "app.accountMgr" ],
-      "technicalName" : "sbs.user"
-    },
-    "id" : "c4332efa-1bc8-4d3c-bf39-e3df93d749e4",
-    "type" : "Role"
-  }, {
-    "attributes" : {
-      "displayName" : "User",
-      "permissions" : [ "app.accountMgr", "app.accountMgr" ],
-      "technicalName" : "sbs.user"
-    },
-    "id" : "c4332efa-1bc8-4d3c-bf39-e3df93d749e4",
-    "type" : "Role"
-  } ],
-  "links" : {
-    "next" : "/customers/8e9833b5-b844-40a3-8572-4a16d29c53bc/roles?page[cursor]=qwerty",
-    "self" : "/customers/8e9833b5-b844-40a3-8572-4a16d29c53bc/roles"
-  }
-}}]
-     - parameter customerId: (path) Customer ID 
-     - parameter pageCursor: (query) Cursor to fetch next paginated items (optional)
-     - parameter pageSize: (query) Max number of items to return in a page (optional, default to 20)
-
-     - returns: RequestBuilder<RoleList> 
-     */
-    open class func getRolesWithRequestBuilder(customerId: String, pageCursor: String? = nil, pageSize: Int? = nil) -> RequestBuilder<RoleList> {
-        var path = "/customers/{customerId}/roles"
-        let customerIdPreEscape = "\(customerId)"
-        let customerIdPostEscape = customerIdPreEscape.addingPercentEncoding(withAllowedCharacters: .urlPathAllowed) ?? ""
-        path = path.replacingOccurrences(of: "{customerId}", with: customerIdPostEscape, options: .literal, range: nil)
-        let URLString = SwaggerClientAPI.basePath + path
-        let parameters: [String:Any]? = nil
-        var url = URLComponents(string: URLString)
-        url?.queryItems = APIHelper.mapValuesToQueryItems([
-                        "page[cursor]": pageCursor, 
-                        "page[size]": pageSize?.encodeToJSON()
-        ])
-
-
-        let requestBuilder: RequestBuilder<RoleList>.Type = SwaggerClientAPI.requestBuilderFactory.getBuilder()
-
-        return requestBuilder.init(method: "GET", URLString: (url?.string ?? URLString), parameters: parameters, isBody: false)
-    }
 }
